# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  creator.py  parser_url.py  status.py
page_analyzer/static/styles/: navbar-top.css
page_analyzer/templates/: all_site.html  index.html  item.html
